--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "foodify",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://julia-lm.github.io/foodify/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -16,7 +17,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://github.com/Julia-Lm/Foodify"
+  }
+  
 }
